--- a/src/global.scss
+++ b/src/global.scss
@@ -24,12 +24,17 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+@import "./style.css";
 
 @media (prefers-color-scheme: light) {
   /*
    * Dark Colors
    * -------------------------------------------
    */
+   :root {
+    --ion-font-family: 'DM Sans', sans-serif;
+}
+  
   
   body {
     --ion-color-primary: #428cff;
@@ -94,6 +99,10 @@
     --ion-color-light-contrast-rgb: 255,255,255;
     --ion-color-light-shade: #1e2023;
     --ion-color-light-tint: #383a3e;
+    
+  }
+  ion-content {
+    --ion-background-color: #b3e5fc; /* Replace this with your desired background color */
   }
   
   /*
