--- a/src/style.css
+++ b/src/style.css
@@ -7,14 +7,46 @@
 
 }
 .dark-theme {
-    --ion-background-color: #000000;
+    /* #232635!important */
+    
+    --ion-background-color: #121212;
     --ion-text-color: #ffffff;
     /* Add other variables for dark mode as needed */
+
+    .card{
+        --ion-background-color: #232635;
+        border-radius: 10px;
+        box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+        color: #ffffff;
+    }
+    .circle{
+        background-color: #232635;
+    }
   }
   /* #3880ff Blue colr */
 .card {
     --ion-background-color: #ffffff;
     border-radius: 10px;
     box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+    color: black;
 }
+
+.circle {
+    position: relative;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+    background-color: #3880ff;
+    width: 50%; /* Adjust the percentage value as needed */
+    padding-bottom: 50%; /* This maintains the aspect ratio (height = width) */
+    border-radius: 50%;
+  }
+  
+  .circle-text {
+    position: absolute;
+    top: 50%; /* Vertically center the text */
+    left: 50%; /* Horizontally center the text */
+    transform: translate(-50%, -50%); /* Adjust for perfect centering */
+    color: white;
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
 
