2nd screen started

--- a/src/app/pages/main-page/main-page.page.html
+++ b/src/app/pages/main-page/main-page.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header> -->
 
-<ion-content class="main-page" style="padding:10%" [ngClass]="{ 'dark-theme': isDarkMode }">
+<ion-content class="main-page" style="padding:10%" >
   <div style="padding:10%">
     <div style="display: flex; justify-content: center;">
       <div class="circle">
