--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
-.main-page {
-    margin-top: 100px;
+ion-app {
+    /* margin-top: 100px; */
 
     --ion-background-color: #F4F7FE;
     --ion-font-family: 'DM Sans', sans-serif;
